--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,6 +2,17 @@
   max-width: 640px;
   color: #ffff !important;
 }
+.footer-section {
+  align-items: center;
+}
 .social {
   color: white;
+}
+.footer-bottom {
+  align-items: center;
+  justify-items: center;
+  display: flex;
+}
+.bottom-line {
+  border-top: 0.7px solid #e4e7ec;
 }
