--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -5,8 +5,11 @@
   }
   .work {
     font-family: Cabin-Bold;
-    color: #f4f4f4;
+    color: #151515;
   }
+}
+b {
+  font-family: Cabin-Bold;
 }
 .about-text {
   max-width: 890px;
