--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,12 +1,12 @@
 small {
   span:after {
-    background-color: #ffff;
+    background-color: #040404;
     content: "";
     display: inline-block;
     height: 1px;
     position: relative;
     vertical-align: middle;
-    width: 10%;
+    width: 12%;
     margin-left: 25px;
   }
 }
@@ -35,7 +35,7 @@ small {
     left: 5%;
     height: 70px;
     border-radius: 10px;
-    width: 335px;
+    width: 310px;
     bottom: 10%;
     color: black;
   }
