--- a/src/pages/Work/Work.scss
+++ b/src/pages/Work/Work.scss
@@ -5,8 +5,13 @@
   max-width: 1200px;
   max-height: 792px;
 }
+.study-tab {
+  display: contents;
+}
 .uk-tab {
   justify-content: space-between;
+  padding-left: 60px !important;
+  padding-right: 60px !important;
 }
 .uk-tab > .uk-active > a {
   border-color: transparent !important;
