--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -7,13 +7,16 @@
   align-items: end;
 }
 .social {
-  color: black;
+  color: black !important;
+  transition: all 0.2s ease-in-out;
 }
-.linkedin {
-  padding: 1px;
-  border: 1px solid black;
-  border-radius: 2px;
-  background-color: black;
+.social:hover > svg {
+  color: black !important;
+  transform: scale(1.1);
+}
+.social:hover > img {
+  color: black;
+  transform: scale(1.1);
 }
 .footer-bottom {
   align-items: center;
