--- a/src/components/Nav/Navbar.scss
+++ b/src/components/Nav/Navbar.scss
@@ -13,9 +13,15 @@
     }
   }
 }
+.menu-btn {
+  font-size: larger !important;
+}
+
 .primary-nav {
   flex-direction: column;
   color: black;
+  align-items: flex-start !important;
+  gap: 0px !important;
   a {
     color: black !important;
   }
@@ -32,7 +38,41 @@
 }
 .uk-offcanvas-bar {
   background-color: #fff !important;
+  padding: 40px !important;
 }
 .uk-close {
+  color: black !important;
+}
+.nav-socials {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.social {
+  height: 42px;
+  width: 42px;
   color: black;
+  transition: all 0.2s ease-in-out;
+  img,
+  svg {
+    height: 42px;
+    width: 42px;
+  }
+}
+
+.social:hover > svg {
+  color: black !important;
+  transform: scale(1.1);
+}
+.social:hover > img {
+  color: black;
+  transform: scale(1.1);
+}
+.fill {
+  fill: black;
+  stroke: white;
+}
+.reverse-fill {
+  stroke: black !important;
+  fill: white !important;
 }
