--- a/src/components/Nav/Navbar.scss
+++ b/src/components/Nav/Navbar.scss
@@ -14,6 +14,12 @@
   }
 }
 .menu-btn {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start !important;
+  p {
+    font-size: xx-small;
+  }
   font-size: larger !important;
 }
 
@@ -47,19 +53,19 @@
   display: flex;
   align-items: center;
   gap: 5px;
-}
-.social {
-  height: 42px;
-  width: 42px;
-  color: black;
-  transition: all 0.2s ease-in-out;
-  img,
-  svg {
+
+  .social {
     height: 42px;
     width: 42px;
+    color: black;
+    transition: all 0.2s ease-in-out;
+    img,
+    svg {
+      height: 42px;
+      width: 42px;
+    }
   }
 }
-
 .social:hover > svg {
   color: black !important;
   transform: scale(1.1);
