--- a/src/components/Nav/Navbar.scss
+++ b/src/components/Nav/Navbar.scss
@@ -1,6 +1,6 @@
 .top-nav {
   background-color: #fff;
-  box-shadow: 0 10px 10px -12px rgb(56 56 56 / 16%);
+  /* box-shadow: 0 10px 10px -12px rgb(56 56 56 / 16%); */
   font-family: Cabin;
   .nav-section {
     background-color: #fff;
