--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -37,3 +37,32 @@
   stroke: black !important;
   fill: white !important;
 }
+.email {
+  display: none;
+}
+@media (max-width: 420px) {
+  .footer-text {
+    display: none;
+  }
+  .email {
+    display: block;
+  }
+  .footer-section {
+    align-items: center;
+  }
+  .footer-socials {
+    white-space: no-wrap;
+    display: contents;
+    .mail {
+      display: none;
+    }
+    a {
+      margin-right: 5px !important;
+    }
+    img,
+    svg {
+      height: 24px;
+      width: 24px;
+    }
+  }
+}
