--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -61,6 +61,9 @@ small {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+.help-text {
+  max-width: 420px;
+}
 
 @media (max-width: 420px) {
   .ellipse-section {
