--- a/src/pages/Work/Work.scss
+++ b/src/pages/Work/Work.scss
@@ -1,5 +1,9 @@
 .study-header {
   max-width: 500px;
+  color: #1e87f0 !important;
+}
+.orange-header {
+  color: #ec4628 !important;
 }
 .study-image {
   max-width: 1200px;
@@ -55,6 +59,14 @@ span.gray-overlay {
   position: absolute;
   z-index: -1;
 }
+.orange-tab li.uk-active a::after {
+  content: "•" !important;
+  color: #ec4628;
+  font-size: 45px;
+  margin-top: 35px;
+  position: absolute;
+  z-index: -1;
+}
 .long-container {
   display: flex;
   align-items: center;
@@ -70,4 +82,32 @@ span.gray-overlay {
 }
 .image-block {
   background-color: #eeee;
+}
+.next-cards {
+  position: relative;
+
+  .next-card {
+    border-radius: 15px;
+    min-height: 540px;
+    overflow: hidden;
+    img {
+      object-fit: cover;
+      min-height: inherit;
+      min-width: inherit;
+    }
+  }
+  .previewText {
+    position: absolute !important;
+    background-color: #ffffff4d;
+    padding-left: 10px;
+    left: 5%;
+    height: 70px;
+    border-radius: 10px;
+    width: 310px;
+    bottom: 10%;
+    color: black;
+  }
+}
+.nxt-header {
+  color: #969696 !important;
 }
