--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,15 @@ body {
   background-color: #fff;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: Cabin !important;
+}
+
 .header-text {
   color: #fff !important;
 }
@@ -55,6 +64,9 @@ a:hover {
 
 h2 {
   font-size: 2.1875rem !important;
+}
+
+h4 {
 }
 
 .top-btn-position {
