--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -36,7 +36,7 @@ small {
   .previewText {
     position: absolute;
     background-color: #ffffff4d;
-    padding-left: 10px;
+    padding: 10px;
     left: 5%;
     height: 70px;
     border-radius: 10px;
