--- a/src/pages/Uncut/Uncut.scss
+++ b/src/pages/Uncut/Uncut.scss
@@ -1,16 +1,7 @@
-.brand-card {
-  min-height: 560px;
-  border-radius: 15px;
-  background-color: #353535 !important;
-}
-.uncut-card {
-  border-radius: 15px;
-  background-color: #353535 !important;
-  height: 430px;
-}
 .tinder {
   margin: auto !important;
   border-radius: 16px !important;
+  z-index: 9 !important;
 }
 .tinder > div {
   border-radius: 16px !important;
