--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -78,6 +78,7 @@ small {
   }
   .work-cards {
     .work-card {
+      margin: auto;
       margin-top: 0px !important;
       min-width: 324px !important;
       min-height: 285px !important;
