--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -10,6 +10,9 @@ small {
     margin-left: 25px;
   }
 }
+.proj {
+  margin-bottom: 2px;
+}
 
 .work-cards {
   li:nth-child(3) {
@@ -43,7 +46,7 @@ small {
     left: 5%;
     height: 70px;
     width: 310px;
-    bottom: 10%;
+    bottom: 5%;
     color: black;
   }
 }
@@ -63,7 +66,7 @@ small {
 }
 
 .summary {
-  max-width: 620px;
+  max-width: 785px;
 }
 
 .home-contact {
@@ -96,6 +99,7 @@ small {
     .previewText {
       width: 210px;
       background-color: #fff;
+      color: black !important;
       border-radius: 0%;
       box-shadow: none !important;
       left: 0%;
@@ -114,6 +118,9 @@ small {
       margin-top: 30px !important;
     }
     li:nth-child(4) {
+      margin-top: 30px !important;
+    }
+    li:nth-child(5) {
       margin-top: 30px !important;
     }
   }
