--- a/src/pages/Work/Work.scss
+++ b/src/pages/Work/Work.scss
@@ -1,7 +1,7 @@
 .study-header {
-  max-width: 500px;
-  color: #1e87f0 !important;
-}
+  max-width: 425px;
+  color: #040404 !important;
+} /* 
 .blue-header {
   color: #1e87f0 !important;
 }
@@ -10,7 +10,7 @@
 }
 .purple-header {
   color: #666eed !important;
-}
+} */
 .study-image {
   max-width: 1200px;
   max-height: 792px;
@@ -102,6 +102,7 @@ span.gray-overlay {
 .tasks {
   list-style: auto;
   margin-left: -15px;
+  width: 333px;
 }
 .next-cards {
   position: relative;
@@ -124,7 +125,7 @@ span.gray-overlay {
     height: 70px;
     border-radius: 10px;
     width: 310px;
-    bottom: 10%;
+    bottom: 5%;
     color: black;
   }
 }
