--- a/src/components/Nav/Navbar.scss
+++ b/src/components/Nav/Navbar.scss
@@ -1,6 +1,6 @@
 .top-nav {
   font-family: Cabin;
-  background-color: #fff;
+  background-color: #f9fafb;
   .nav-section {
     padding: 6px;
     .logo {
