--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,7 @@
 
 body {
   font-family: Cabin;
-  background-color: #fff;
+  background-color: #f9fafb;
 }
 
 h1,
@@ -27,10 +27,6 @@ h4,
 h5,
 h6 {
   font-family: Cabin !important;
-}
-
-.header-text {
-  color: #fff !important;
 }
 
 a {
@@ -48,7 +44,7 @@ a:hover {
 }
 
 .header-text {
-  font-family: Cabin-SemiBold !important;
+  font-family: Cabin !important;
   color: #040404;
 }
 
